// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders a flat button on dark background 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-text Button Button--dark-background MuiButton-textPrimary"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    Caption
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`Button component renders an outlined button on dark background 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-outlined Button Button--dark-background MuiButton-outlinedPrimary"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    Caption
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`Button component renders correctly 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-contained Button MuiButton-containedPrimary"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    Caption
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;
